--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.24.7",
+    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "lucide-react": "^0.554.0"
+    "react-helmet-async": "^2.0.5",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
